@@ -1,6 +1,7 @@
 version 0.77.05
 	glade code cleanup
 	Adding libxml2-2.dll to windows zip
+	automatically select new picture in buffer window
 
 version 0.77.04 ( 2011-11-01 )
 	--select_af_point
